cabal-version: 3.0

name: async-once
version: 0

library
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: src
    default-extensions: LambdaCase NamedFieldPuns NoImplicitPrelude
    exposed-modules: AsyncOnce
    build-depends: async, base, relude, safe-exceptions, stm, transformers
