cabal-version: 3.0

name: async-once
version: 0

library
    default-language: Haskell2010
    ghc-options: -Wall
    hs-source-dirs: src
    default-extensions: ExistentialQuantification NoImplicitPrelude
    exposed-modules: AsyncOnce
    other-modules: AsyncOnce.AsyncOnce AsyncOnce.Conversions AsyncOnce.Done AsyncOnce.Poll
    build-depends: async, base, relude, stm, transformers
