cabal-version: 3.0

name: lazy-async
version: 0

common language
    default-language: Haskell2010
    ghc-options: -Wall
    default-extensions: ExistentialQuantification NoImplicitPrelude

common dependencies
    build-depends: async, base, exceptions, stm, unliftio-core

library
    import: language, dependencies
    hs-source-dirs: src
    exposed-modules: LazyAsync
    other-modules:
        LazyAsync.Conversions
        LazyAsync.LazyAsync
        LazyAsync.Outcome
        LazyAsync.Polling
        LazyAsync.Spawning
        LazyAsync.Starting
        LazyAsync.Status
        LazyAsync.Waiting

test-suite test
    import: language, dependencies
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: test.hs
    default-extensions: OverloadedStrings
    build-depends: hedgehog, lazy-async, o-clock
