cabal-version: 3.0

name: lazy-async
version: 0

common language
    default-language:   Haskell2010
    ghc-options:        -Wall
    default-extensions: DeriveFoldable
    default-extensions: DeriveFunctor
    default-extensions: DeriveTraversable
    default-extensions: ExistentialQuantification
    default-extensions: FlexibleContexts
    default-extensions: NoImplicitPrelude
    default-extensions: StandaloneDeriving

common dependencies
    build-depends:      base              ^>= 4.14   || ^>= 4.15
    build-depends:      exceptions        ^>= 0.10.4
    build-depends:      lifted-async      ^>= 0.10.0.6
    build-depends:      monad-control     ^>= 1.0.2.3
    build-depends:      stm               ^>= 2.5
    build-depends:      transformers
    build-depends:      transformers-base ^>= 0.4.5.1

common test-dependencies
    import:             dependencies
    build-depends:      hedgehog          ^>= 1.0.4
    build-depends:      lazy-async
    build-depends:      optics-core       ^>= 0.3    || ^>= 0.4
    build-depends:      optics-th         ^>= 0.3    || ^>= 0.4

library
    import:             language, dependencies
    hs-source-dirs:     src
    exposed-modules:    LazyAsync
    other-modules:      LazyAsync.Async
    other-modules:      LazyAsync.Actions.Memoize
    other-modules:      LazyAsync.Actions.Poll
    other-modules:      LazyAsync.Actions.Spawn
    other-modules:      LazyAsync.Actions.Start
    other-modules:      LazyAsync.Actions.StartWait
    other-modules:      LazyAsync.Actions.Wait
    other-modules:      LazyAsync.Prelude
    other-modules:      LazyAsync.Types
    other-modules:      LazyAsync.Types.Complex
    other-modules:      LazyAsync.Types.LazyAsync
    other-modules:      LazyAsync.Types.Outcome
    other-modules:      LazyAsync.Types.Resource
    other-modules:      LazyAsync.Types.StartPoll
    other-modules:      LazyAsync.Types.Status

test-suite test
    import:             language, test-dependencies
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    default-extensions: BlockArguments
    default-extensions: OverloadedStrings
    default-extensions: TemplateHaskell
    other-modules:      Test.Counter
    other-modules:      Test.Exceptions
    other-modules:      Test.Optics
